Updated pages with small errors (textual,) updated team roster, laid frameworks for FTC pages

--- a/ftc.html
+++ b/ftc.html
@@ -16,8 +16,8 @@ Title: FTC Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>About FTC | Team Enginuity</title>
 </head>
 
@@ -35,7 +35,7 @@ Title: FTC Page
             <p><strong>View Previous Games</strong> <a href="oldgames/ftc2013.html">2013-2014</a></p>
             <table class="gameinfo center">
                 <tr>
-                    <td class="gamelogo"><img alt="FTC Cascade Effect logo" src="./assets/first/ftc2014.png"></td>
+                    <td class="gamelogo"><img alt="FTC Cascade Effect logo" src="/assets/first/ftc2014.png"></td>
                     <td class="gamevideo"><iframe width="400" height="225" src="//www.youtube.com/watch?v=ABmBxCwHV94" frameborder="0" allowfullscreen></iframe></td>
                 </tr>
             </table>
