--- a/ftcgirls.html
+++ b/ftcgirls.html
@@ -16,8 +16,8 @@ Title: FTC Girls Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>FTC Girls Team | Team Enginuity</title>
 </head>
 
@@ -30,7 +30,9 @@ Title: FTC Girls Page
             {% include navbar.html %}
         </div>
         <div id="main">
-           <h1>About Royal Dragons | FTC 7084</h1>
+            <h1>About Royal Dragons | FTC 7084</h1>
+            <img class="teamphoto" alt="Royal Dragons" src="/assets/home/royaldragons_small.jpg">
+            <p class="center" style="font-size: 0.75em;"><strong>Royal Dragons 2014</strong></p>
         </div>
         <div id="footer">
             {% include footer.html %}
