--- a/ftcguys.html
+++ b/ftcguys.html
@@ -16,8 +16,8 @@ Title: FTC Guys Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>FTC Guys Page | Team Enginuity</title>
 </head>
 
@@ -31,6 +31,7 @@ Title: FTC Guys Page
         </div>
         <div id="main">
             <h1>About Enginuity FTC | FTC 5969</h1>
+            
         </div>
         <div id="footer">
             {% include footer.html %}
