--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ Title: Index Page
      DESIGN BY JONATHAN LACSON
 
      CODED IN BRACKETS
-     VERSION 0.6e - 6 FEB 2014
 -->
 
 <head>
@@ -25,8 +24,8 @@ Title: Index Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Home | Team Enginuity</title>
     <meta name='description' content="Third-Year FTC and FRC Team with lots of potential from Newport News, Virginia">
 </head>
@@ -41,12 +40,12 @@ Title: Index Page
         </div>
         <div id="main">
             <h1>Welcome!</h1>
-            <a href="team.html"><img class="teamphoto" alt="Team Photo" src="./assets/home/teampic2014_small.jpg"></a>
+            <a href="team.html"><img class="teamphoto" alt="Team Photo" src="/assets/home/teampic2014_small.jpg"></a>
             <p class="center" style="font-size: 0.75em;"><strong>Team Enginuity 2014</strong></p>
             <div id="index-blurb">
                 <p>We are a high school robotics team from Warwick High School in Newport News, Virginia. We are fairly new -- we were formed in 2012. We compete in three robotics competitions: the FIRST Tech Challenge, with an all-male team (5969) and an all-female team (7084); the FIRST Robotics Challenge, with a co-ed team (4538); and the MIT SeaPerch Remotely Operated Vehicle Challenge. We are a group of determined, creative students from grades 9-12.</p>
                 <p><strong>Our goal is to expand mankind’s horizons in the fields of science, technology, engineering, and mathematics; and to instill a sense of leadership, community, and innovation in our members.</strong></p>
-                <p>We are glad that you have decided to stop by and take the time to come check out our website! Whether you are part of a veteran FIRST team, a rookie team or not part of a team, our site contains lots of useful information. Here, you can find current information about the 2013 FTC Game, <strong>Block Party</strong>; and the 2014 FRC Game, <strong>Aerial Assist</strong>; along with further information about our team and our sponsors, media from previous competitions, and resources for other teams.</p>
+                <p>We are glad that you have decided to stop by and take the time to come check out our website! Whether you are part of a veteran FIRST team, a rookie team or not part of a team, our site contains lots of useful information. Here, you can find current information about the 2014 FTC Game, <strong>Cascade Effect</strong>; and the 2015 FRC Game, <strong>Recycle Rush</strong>; along with further information about our team and our sponsors, media from previous competitions, and resources for other teams.</p>
             </div>
             <div id="index-twitter">
                 <a class="twitter-timeline" height="300px" data-dnt="true" href="https://twitter.com/EnginuityWHS"  data-widget-id="422480523475165184">Tweets by @EnginuityWHS</a>
