--- a/sponsors.html
+++ b/sponsors.html
@@ -16,8 +16,8 @@ Title: Sponsors Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Sponsors | Team Enginuity</title>
 </head>
 
@@ -44,9 +44,9 @@ Title: Sponsors Page
                 <p>Team Enginuity would like to thank the following organizations and individuals for their contributions. These contributions help fund expenditures such as registration fees, travel expenses, extra parts, marketing costs, and more.</p>
                 <div id="sp-logos" class="center">
                     <h2>Organizations</h2>
-                    <a href="http://sbo.nn.k12.va.us" target="_blank"><img alt="Newport News Public Schools" src="./assets/spon/nnps.gif"></a>
-                    <a href="http://robotics.nasa.gov" target="_blank"><img alt="NASA" src="./assets/spon/nasa.png"></a>
-                    <a href="http://www.rockwellcollins.com/" target="_blank"><img alt="Rockwell Collins" src="./assets/spon/rockwell.png"></a>
+                    <a href="http://sbo.nn.k12.va.us" target="_blank"><img alt="Newport News Public Schools" src="/assets/spon/nnps.gif"></a>
+                    <a href="http://robotics.nasa.gov" target="_blank"><img alt="NASA" src="/assets/spon/nasa.png"></a>
+                    <a href="http://www.rockwellcollins.com/" target="_blank"><img alt="Rockwell Collins" src="/assets/spon/rockwell.png"></a>
                 </div>
                 <div id="sp-people" class="center">
                     <h2>Individuals</h2>
