--- a/team.html
+++ b/team.html
@@ -16,8 +16,8 @@ Title: Team Roster Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Team Roster | Team Enginuity</title>
 </head>
 
@@ -36,13 +36,11 @@ Title: Team Roster Page
                     <col span="1">
                     <col span="1">
                 </colgroup>
-                <thead>
-                    <tr>
-                        <td><h2>Sub-division</h2></td>
-                        <td><h2>Members</h2></td>
-                    </tr>
-                </thead>
-                <tr class="normalp">
+                <tr>
+                    <td><h2>Team</h2></td>
+                    <td><h2>Members</h2></td>
+                </tr>
+                <tr>
                     <td>Coaches + Mentors</td>
                     <td><h3>Coach: Karen Bazemore</h3>
                         <p>J. Stork (NNPS)</p>
@@ -54,72 +52,44 @@ Title: Team Roster Page
                         <p>E. Leeks (Huntington Ingalls)</p>
                     </td>
                 </tr>
-                <tr class="normalp">
-                    <td>Captains</td>
-                    <td><h3>Captain: TBD</h3>
-                        <p>Safety Captain: Las S. (2016)</p></td>
-                </tr>
-                    <td>Mechanical</td>
-                    <td><h3>Co-Leads: Ernest N. (2016) & Adam P. (2016)</h3>
-                        <p>Sahaj B. (2015)</p>
-                        <p>Christian M. (2015)</p>
-                        <p>Dani C. (2016)</p>
+                    <td>Mechanisms</td>
+                    <td>
+                        <p>Danielle C. (2016)</p>
                         <p>Justin G. (2016)</p>
-                        <p>Taj F. (2016)</p>
-                        <p>Quintin L. (2016)</p>
                         <p>Kyra M. (2016)</p>
                         <p>Joanne S. (2016)</p>
-                        <p>Joe B. (2017)</p>
-                        <p>Daniel B. (2017)</p>
+                        <p>Abby N. (2016)</p>
+                        <p>Jalisa W. (2016)</p>
                     </td>
                 </tr>
                 <tr>
-                    <td>Electrical</td>
-                    <td><h3>Lead: Quintin L. (2016)</h3>
-                        <p>Lawrence P. (2015)</p>
-                        <p>Sarah F. (2016)</p>
-                        <p>Kyra M. (2016)</p>
+                    <td>Drivetrain</td>
+                    <td>
+                        <p>Quintin L. (2016)</p>
                         <p>Ernest N. (2016)</p>
-                        <p>Joanne S. (2016)</p>
-                        <p>Daniel B. (2017)</p>
-                        <p>Valencia R. (2017)</p>
-                        <p>Josue B. (2018)</p>
+                        <p>Adam P. (2016)</p>
+                        <p>Josue M. (2018)</p>
                     </td>
                 </tr>
                 <tr>
                     <td>Programming</td>
-                    <td><h3>Lead: Sahaj B. (2015)</h3>
+                    <td>
+                        <p>Sahaj B. (2015)</p>
                         <p>Lawrence P. (2015)</p>
                         <p>Rakshith R. (2015)</p>
-                        <p>Sarah F. (2016)</p>
                         <p>Bryce E. (2018)</p>
                     </td>
                 </tr>
                 <tr>
-                    <td>Strategy</td>
-                    <td><h3>Lead: Christian M. (2015)</h3>
-                        <p>Sahaj B. (2015)</p>
-                        <p>Lawrence P. (2015)</p>
-                        <p>Rakshith R. (2015)</p>
-                        <p>Quintin L. (2016)</p>
-                        <p>Ernest N. (2016)</p>
+                    <td>Systems Engineering</td>
+                    <td>
+                        <p>Las S. (2016)</p>
+                        <p>Sarah F. (2016)</p>
                     </td>
                 </tr>
                 <tr>
-                    <td>Design</td>
-                    <td><h3>Lead: Christian M. (2015)</h3>
-                        <p>Sahaj B. (2015)</p>
-                        <p>Rakshith R. (2015)</p>
-                        <p>Ernest N. (2016)</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Website / Social Media</td>
-                    <td><h3>Lead: Jonathan L. (2016)</h3></td>
-                </tr>
-                <tr>
-                    <td>Marketing</td>
-                    <td><h3>Lead: Las S. (2016)</h3>
+                    <td>Website / Media</td>
+                    <td>
                         <p>Jonathan L. (2016)</p>
                     </td>
                 </tr>
