--- a/oldgames/frc2014.html
+++ b/oldgames/frc2014.html
@@ -16,8 +16,8 @@ Title: FRC Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>About FRC | Team Enginuity</title>
 </head>
 
@@ -34,7 +34,7 @@ Title: FRC Page
             <p>2014 Game: <strong>Aerial Assist</strong></p>
             <table class="gameinfo center">
                 <tr>
-                    <td class="gamelogo"><img alt="Aerial Assist Logo" src="./assets/first/frc2014.png"></td>
+                    <td class="gamelogo"><img alt="Aerial Assist Logo" src="/assets/first/frc2014.png"></td>
                     <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/embed/oxp4dkMQ1Vo" frameborder="0" allowfullscreen></iframe></td>
                 </tr>
             </table>
