--- a/oldgames/ftc2013.html
+++ b/oldgames/ftc2013.html
@@ -16,8 +16,8 @@ Title: FTC Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>About FTC | Team Enginuity</title>
 </head>
 
@@ -34,7 +34,7 @@ Title: FTC Page
             <p>2013-14 Game: <strong>Block Party</strong></p>
             <table class="gameinfo center">
                 <tr>
-                    <td class="gamelogo"><img alt="FTC Block Party logo" src="../assets/first/ftc2013.png"></td>
+                    <td class="gamelogo"><img alt="FTC Block Party logo" src="/assets/first/ftc2013.png"></td>
                     <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/embed/UPAATO-NpcM" frameborder="0" allowfullscreen></iframe></td>
                 </tr>
             </table>
