--- a/sponsors.html
+++ b/sponsors.html
@@ -51,6 +51,7 @@ Title: Sponsors Page
                 <div id="sp-people" class="center">
                     <h2>Individuals</h2>
                     <p>Christian May</p>
+                    <p>Gradwell Family</p>
                 </div>
             </div>
         </div>
