Slight visual tweaks; New background?

--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@ Title: Team Roster Page
                         <p>Josue M. (2018)</p>
                     </td>
                 </tr>
-                <tr>
+                <tr title="system.out.println('Team Hello World')">
                     <td>Programming</td>
                     <td>
                         <p>Sahaj B. (2015)</p>
@@ -83,14 +83,14 @@ Title: Team Roster Page
                 <tr>
                     <td>Systems Engineering</td>
                     <td>
-                        <p>Las S. (2016)</p>
+                        <p title="Safety Captain">Las S. (2016)</p>
                         <p>Sarah F. (2016)</p>
                     </td>
                 </tr>
                 <tr>
                     <td>Website / Media</td>
                     <td>
-                        <p>Jonathan L. (2016)</p>
+                        <p title="Hope you like the site!">Jonathan L. (2016)</p>
                     </td>
                 </tr>
                 <tr>
