Fixed (as much as possible) for W3C validator

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@ Title: Index Page
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!--CSS-->
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="/css/master.css" rel="stylesheet" type="text/css">
+    <link href="/css/master.css" rel="stylesheet" type="text/css"/>
 <!--JS-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
     <title>Home | Team Enginuity</title>
-    <meta name='description' content="Third-Year FTC and FRC Team with lots of potential from Newport News, Virginia">
+    <meta name='description' content="Third-Year FTC and FRC Team with lots of potential from Newport News, Virginia"/>
 </head>
 
 <body>
