More W3C Validator fixes!

--- a/ftcgirls.html
+++ b/ftcgirls.html
@@ -16,8 +16,8 @@ Title: FTC Girls Page
     <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
     <script type='text/javascript' src='js/dynamicpage.js'></script>
 <!--OTHER-->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
     <title>FTC Girls Team | Team Enginuity</title>
 </head>
 
