Updated roster for captains

--- a/team.html
+++ b/team.html
@@ -52,6 +52,12 @@ Title: Team Roster Page
                         <p>E. Leeks (Huntington Ingalls)</p>
                     </td>
                 </tr>
+                <tr>
+                    <td>Captains</td>
+                    <td><p><strong>Captain: </strong>TBD</p>
+                        <p><strong>Safety Captain: </strong>Las S. (2016)</p>
+                    </td>
+                </tr>
                     <td>Mechanisms</td>
                     <td>
                         <p>Danielle C. (2016)</p>
